Adding on to Strategic section

--- a/tier5.html
+++ b/tier5.html
@@ -311,10 +311,83 @@
       <img class="featureCompetition" alt="feature Prioritization Chart" src="myimages/tier5/strategy/feature-competition.png">
       </div>
 
+      <div><p class="statement">Reccomendations</p></div>
+      <div><p class="C">Reccomendations</p></div>
+      
+      <div class= "allRecCircle">
+        <div class="recCircle"><p class="circleText">allow direct individual searchs</p></div>
+        <div class="recCircle"><p class="circleText">allow customers to see what technologies thier targets are using</p></div>
+        <div class="recCircle"><p class="circleText">allow customers to see what technologies thier targets are using</p></div>
+        <div class="recCircle"><p class="circleText">create nuturing capabilities</p></div>
+        <div class="recCircle"><p class="circleText">continue with the "Walmart" for leads strategy</p></div>
+      </div>
+
+
+      <div class="pieIntro">
+        <div class="pieIntro25 pieIntroSec">
+          <p class="pieIntroTitle octoOrange">Tier 5's Current Offering</p>
+          <p class="pieIntroSubTitle">Only Low Touch, High Volume</p>
+          <p class="pieText">Only 25% of salespeople</p>
+        </div>
+        <div class="pieIntro75 pieIntroSec">
+          <p class="pieIntroTitle octoOrange"> Our Strategic Reccommendation</p>
+          <p class="pieIntroSubTitle">Address High Touch, Low Volume</p>
+          <p class="pieText">Add "Nuturing Capabilities" & Individual Search</p>
+          <p class="pieText">75% of salespeople</p>
+        </div>
+        <div class="pieIntro100 pieIntroSec">
+          <p class="pieIntroTitle octoOrange">The New Tier 5 OutBound Sale Tool</p>
+          <p class="pieIntroSubTitle">Reaches 100% of the addressable market</p>
+        </div>
+      </div>
+
+      <div class="pies">
+        <img class="pieItem pieItem25" alt="Pie Chart 25%" src="myimages/tier5/strategy/pie25.png">
+        <img class="pieSign piePlus" alt="Plus Sign" src="myimages/tier5/strategy/plus.png">
+        <img class="pieItemBig" alt="Pie Chart 75%" src="myimages/tier5/strategy/pie75.png">
+        <img class="pieSign pieEqual" alt="Equals Sign" src="myimages/tier5/strategy/equals.png">
+        <img class="pieItemBig pieItem100" alt="Pie Chart 100%" src="myimages/tier5/strategy/pie100.png">
+      </div>
+
+<!-- ALTERNATIVE WAY TO DO PIES ALL IN SAME DIV -->
+      <!-- <div class="pieIntro">
+        <div class="pieIntro25 pieIntroSec">
+          <p class="pieIntroTitle octoOrange">Tier 5's Current Offering</p>
+          <p class="pieIntroSubTitle">Only Low Touch, High Volume</p>
+          <p class="pieText">Only 25% of salespeople</p>
+          <img class="pieItem" alt="Pie Chart 25%" src="myimages/tier5/strategy/pie25.png">
+        </div>
+        <div class="operators pieIntroSec">
+        <div class="blank"></div><div><img class="pieSign piePlus" alt="Plus Sign" src="myimages/tier5/strategy/plus.png"></div>
+      </div>
+        <div class="pieIntro75 pieIntroSec">
+          <p class="pieIntroTitle octoOrange"> Our Strategic Reccommendation</p>
+          <p class="pieIntroSubTitle">Address High Touch, Low Volume</p>
+          <p class="pieText">Add "Nuturing Capabilities" & Individual Search</p>
+          <p class="pieText">75% of salespeople</p>
+          <img class="pieItemBig pieItem" alt="Pie Chart 75%" src="myimages/tier5/strategy/pie75.png">
+        </div>
+        <div class="operators pieIntroSec">
+        <div class="blank"></div> <div>
+        <img class="pieSign pieEqual" alt="Equals Sign" src="myimages/tier5/strategy/equals.png">
+        </div>
+
+        </div>
+        <div class="pieIntro100 pieIntroSec">
+          <p class="pieIntroTitle octoOrange">The New Tier 5 OutBound Sale Tool</p>
+          <p class="pieIntroSubTitle">Reaches 100% of the addressable market</p>
+          <img class="pieItemBig pieItem" alt="Pie Chart 100%" src="myimages/tier5/strategy/pie100.png">
+        </div>
+      </div> -->
+
+
+
     <div class="processSectionTitle" id="researchSection">Research &amp Discovery</div>
     <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
     <div class="processSectionTitle" id="designSection">Design</div>
     <div class="processSectionTitle" id="researchSection">Build &amp Deliver</div>
+
+
 
       <!-- THE CONTENT DIV   -->
       </div>
