Fix About Photo and quote

--- a/about.html
+++ b/about.html
@@ -52,14 +52,17 @@
   <div id="content">
 
       <div id="mainImg">
-          <div id="myPicDiv"><img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg"></div>
-          <ul id="quote">
-            <li class="topQuote"><img id="quoteLeft" class="quoteImg" alt="Quotation mark" src="myimages/about/quote-left.png"></li>
-              <li><p class="quoteText topQuote">Start with the</p></li>
-              <li><p class="quoteText">business, not</p></li>
-              <li class="quoteText bottomQuote"><p>the tech.</p></li>
-              <li class="bottomQuote"><img class="quoteImg" alt="Quotation mark" src="myimages/about/quote-right.png"></li>
-          </ul>
+          <div id="myPicDiv">
+            <ul id="quote">
+              <li class="topQuote"><img id="quoteLeft" class="quoteImg" alt="Quotation mark" src="myimages/about/quote-left.png"></li>
+                <li><p class="quoteText topQuote">Start with the</p></li>
+                <li><p class="quoteText">business, not</p></li>
+                <li class="quoteText bottomQuote"><p>the tech.</p></li>
+                <li class="bottomQuote"><img class="quoteImg" alt="Quotation mark" src="myimages/about/quote-right.png"></li>
+            </ul>
+            <img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg">
+          </div>
+
         </div>
 
     <div id="contact">
