--- a/tier5.html
+++ b/tier5.html
@@ -76,7 +76,7 @@
           </p>
           </div>
         </div>
-        <div class="ourProcess">
+        <div class="ourProcess row">
             <p class="ourProcessTitle">Our Process</p>
             <div class="processCircleDiv">
               <div class="processCircle process stratDesCircle"><a href="#strategySection"><p class="circleText">Strategy</p></a></div>
@@ -91,7 +91,7 @@
             </div>
         </div>
 
-        <div class="processSectionTitle" id="strategySection">Strategy</div>
+        <div class="processSectionTitle row" id="strategySection">Strategy</div>
 
         <div class= "ourApproachTitle">Our Strategic Approach</div>
 
@@ -311,17 +311,19 @@
       <img class="featureCompetition" alt="feature Prioritization Chart" src="myimages/tier5/strategy/feature-competition.png">
       </div>
 
-      <div><p class="statement">Reccomendations</p></div>
-      <div><p class="C">Reccomendations</p></div>
-      
-      <div class= "allRecCircle">
-        <div class="recCircle"><p class="circleText">allow direct individual searchs</p></div>
-        <div class="recCircle"><p class="circleText">allow customers to see what technologies thier targets are using</p></div>
-        <div class="recCircle"><p class="circleText">allow customers to see what technologies thier targets are using</p></div>
-        <div class="recCircle"><p class="circleText">create nuturing capabilities</p></div>
-        <div class="recCircle"><p class="circleText">continue with the "Walmart" for leads strategy</p></div>
-      </div>
+      <div><p class="statement">Recommendations</p></div>
 
+      <div class="circleRecWrapper">
+
+      <div class= "allRecCircle">
+        <div class="recCircle">
+        <p class="circleRecText"><b>Allow direct individual searchs:</b> on-demand search for contact information for one-off targets</p>
+        </div>
+        <div class="recCircle"><p class="circleRecText"><b>Create nuturing capabilities:</b> individual profiles with news, interests, education, and other info</p></div>
+        <div class="recCircle"><p class="circleRecText"><b>Integrate technology solution:</b> allow customers to see what technologies used by their targets </p></div>
+        <div class="recCircle"><p class="circleRecText"><b>Continue with the low-cost provider strategy</b>, "Walmart" for leads </p></div>
+      </div>
+      </div>
 
       <div class="pieIntro">
         <div class="pieIntro25 pieIntroSec">
@@ -330,7 +332,7 @@
           <p class="pieText">Only 25% of salespeople</p>
         </div>
         <div class="pieIntro75 pieIntroSec">
-          <p class="pieIntroTitle octoOrange"> Our Strategic Reccommendation</p>
+          <p class="pieIntroTitle octoOrange"> Our Strategic Recommendation</p>
           <p class="pieIntroSubTitle">Address High Touch, Low Volume</p>
           <p class="pieText">Add "Nuturing Capabilities" & Individual Search</p>
           <p class="pieText">75% of salespeople</p>
@@ -380,9 +382,33 @@
         </div>
       </div> -->
 
-
-
     <div class="processSectionTitle" id="researchSection">Research &amp Discovery</div>
+
+      <div class="survey">
+        <div class="surveyPeepsContainer">
+          <div class="peepsStats">
+            <p>21</p>
+            <p>Sales Representatives</p>
+            <p>Surveyed</p>
+          </div>
+
+          <div class="peeps">
+              <img alt="Pie Chart 25%" src="myimages/tier5/research/peeps.png">
+          </div>
+        </div>
+
+        <div class="surveyDes">
+          <p>In order to understand what a sales representative needs, we created a survey with questions about their prospecting, qualifying, and closing process.
+          </p>
+
+        </div>
+      </div>
+
+      <div class="interview">
+
+      </div>
+
+
     <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
     <div class="processSectionTitle" id="designSection">Design</div>
     <div class="processSectionTitle" id="researchSection">Build &amp Deliver</div>
