Adding Tier 5 Research Section

--- a/tier5.html
+++ b/tier5.html
@@ -384,29 +384,145 @@
 
     <div class="processSectionTitle" id="researchSection">Research &amp Discovery</div>
 
-      <div class="survey">
-        <div class="surveyPeepsContainer">
-          <div class="peepsStats">
-            <p>21</p>
-            <p>Sales Representatives</p>
-            <p>Surveyed</p>
+      <div class="surveyAndInterview">
+        <div class="researchPeepsContainer">
+          <div class="peepsStats width researchInline">
+            <p class= "researchNumbers octoOrange">21</p>
+            <p>Sales Representatives Surveyed</p>
+          </div>
+            <img class="peeps topPeep researchInline" alt="People Icon" src="myimages/tier5/research/peeps.png">
+            <div class="researchDes heavyText researchInline">
+              <p>
+                In order to understand what a sales representative needs, we created survey questions about their prospecting, qualifying, and closing process. This gave us a great initial direction on our designs and helped us to develop our more extensive interview questions.
+              </p>
+            </div>
           </div>
 
-          <div class="peeps">
-              <img alt="Pie Chart 25%" src="myimages/tier5/research/peeps.png">
+        <div class="researchPeepsContainer">
+          <div class="peepsStats width researchInline">
+            <p class= "researchNumbers octoOrange">10</p>
+            <p>Users Interviewed</p>
           </div>
-        </div>
 
-        <div class="surveyDes">
-          <p>In order to understand what a sales representative needs, we created a survey with questions about their prospecting, qualifying, and closing process.
+          <img class=" researchInline peeps"alt="People Icon" src="myimages/tier5/research/peeps.png">
+
+          <div class="researchDes heavyText researchInline">
+          <p>
+          The interview process gave us a more in-depth perspective about how salespeople go about nuturing clients and upselling.
           </p>
-
+          </div>
         </div>
       </div>
 
-      <div class="interview">
+  <div><p class="statement statmentOrange">Survey resulted in 4 key insights</p></div>
 
-      </div>
+<div class="researchCirTri">
+    <div class="researchCircles">
+      <!-- <p class="circleP1 researchP">Researching our user&#39;s daily lead requirement gave us this insight:</p> -->
+      <p class="titleP researchP">Most salespeople are one of two main types:</p>
+      <!-- <p class="researchP">High Touch, Low Volume</p>
+      <p class="researchP">Low Touch, High Volume</p> -->
+      <img class="circles3" alt="3 Circles" src="myimages/tier5/research/circles3.png">
+    </div>
+
+  <div class="researchTriangles">
+
+  <div class="triangleSection">
+    <img class="triangle" alt="Triangle charts" src="myimages/tier5/research/triangle62.png">
+
+    <div class = "triangleText">
+      <p class="titleP">Waste of time &amp money</p>
+      <p>62% of individuals use two or more platforms to find leads</p>
+    </div>
+  </div>
+
+  <div class="triangleSection">
+    <img class="triangle"alt="Triangle charts" src="myimages/tier5/research/triangle76.png">
+    <div class = "triangleText">
+      <p class="titleP">Need information to &#34;nuture&#34; leads</p>
+      <p>76% of individuals thought it would be useful to have a newsfeed to improve the &#34;nurturing&#34; of a lead in order to close and up-sell</p>
+
+    </div>
+  </div>
+    <div class="triangleSection">
+      <img class="triangle" alt="Triangle charts" src="myimages/tier5/research/triangle95.png">
+      <div class = "triangleText">
+      <p class="titleP">Willingness to help imporve the algorithm</p>
+      <p>95% of individuals were willing to give some feedback to improve the accuracy of Tier5&#39;s contact information</p>
+    </div>
+  </div>
+</div>
+</div>
+
+<div><p class="statement">In-depth interview insights</p></div>
+
+<div class="brainBackground">
+
+  <img class="brain" alt="Brain Icons & Bubble" src="myimages/tier5/research/brain4.png">
+
+</div>
+
+<div class="squaresAndRecs">
+
+
+<div class="squareRec">
+
+<div class= "square heavyText">
+  <p>&#34;Every lead takes lots of sweat, dilligence and calling in favors.&#34;
+  </p>
+  </div>
+
+<div class="rec heavyText">
+  <p>First impressions are a hard, one-shot deal.
+  </p>
+</div>
+
+</div>
+<!-- ADD MROE HERE -->
+
+</div>
+
+
+  <div><p class="statement">Initial research findings</p></div>
+
+<div class="findings">
+    <div class="findingsCircle"></div>
+
+    <div class="findingsText">
+      <p><b>Validated our strategic recommendation to add &#34;nurturing&#34; capabilities</b> to Tier5&#39;s design, something high in demand for both key types of salespeople.</p>
+    </div>
+</div>
+
+<div class="line"></div>
+
+<div class="findings">
+    <div class="findingsCircle"></div>
+
+    <div class="findingsText">
+      <p><strong>There are two very distinct types of salespeople with different requirements</strong>: targeted bulk leads or targeted individual search.</p>
+    </div>
+</div>
+
+<div class="line"></div>
+
+<div class="findings">
+    <div class="findingsCircle"></div>
+
+    <div class="findingsText">
+      <p><b>Users are willing to give feedback</b> to improve Tier5&#39;s algorithm. This also has business implications as users may trial the product longer to see verify if data improves.</p>
+    </div>
+</div>
+
+<div class="line"></div>
+
+<div class="findings">
+    <div class="findingsCircle"></div>
+
+    <div class="findingsText">
+      <p>Harnassing <b font-weight="800">social media and Klout scores are integral for users</b> to better connect with growing millennial market.</p>
+    </div>
+</div>
+
 
 
     <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
