adding pseudo elements

--- a/tier5.html
+++ b/tier5.html
@@ -486,14 +486,14 @@
   <div><p class="statement">Initial research findings</p></div>
 
 <div class="findings">
-    <div class="findingsCircle"></div>
+    <div class="findingsCircle1"></div>
 
     <div class="findingsText">
       <p><b>Validated our strategic recommendation to add &#34;nurturing&#34; capabilities</b> to Tier5&#39;s design, something high in demand for both key types of salespeople.</p>
     </div>
 </div>
 
-<div class="line"></div>
+<!-- <div class="line"></div> -->
 
 <div class="findings">
     <div class="findingsCircle"></div>
@@ -503,7 +503,7 @@
     </div>
 </div>
 
-<div class="line"></div>
+<!-- <div class="line"></div> -->
 
 <div class="findings">
     <div class="findingsCircle"></div>
@@ -513,7 +513,7 @@
     </div>
 </div>
 
-<div class="line"></div>
+<!-- <div class="line"></div> -->
 
 <div class="findings">
     <div class="findingsCircle"></div>
@@ -523,12 +523,9 @@
     </div>
 </div>
 
-
-
     <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
     <div class="processSectionTitle" id="designSection">Design</div>
     <div class="processSectionTitle" id="researchSection">Build &amp Deliver</div>
-
 
 
       <!-- THE CONTENT DIV   -->
