adding interview comments research section

--- a/tier5.html
+++ b/tier5.html
@@ -432,7 +432,7 @@
 
     <div class = "triangleText">
       <p class="titleP">Waste of time &amp money</p>
-      <p>62% of individuals use two or more platforms to find leads</p>
+      <p class="heavyText">62% of individuals use two or more platforms to find leads</p>
     </div>
   </div>
 
@@ -440,7 +440,7 @@
     <img class="triangle"alt="Triangle charts" src="myimages/tier5/research/triangle76.png">
     <div class = "triangleText">
       <p class="titleP">Need information to &#34;nuture&#34; leads</p>
-      <p>76% of individuals thought it would be useful to have a newsfeed to improve the &#34;nurturing&#34; of a lead in order to close and up-sell</p>
+      <p class="heavyText">76% of individuals thought it would be useful to have a newsfeed to improve the &#34;nurturing&#34; of a lead in order to close and up-sell</p>
 
     </div>
   </div>
@@ -448,7 +448,7 @@
       <img class="triangle" alt="Triangle charts" src="myimages/tier5/research/triangle95.png">
       <div class = "triangleText">
       <p class="titleP">Willingness to help imporve the algorithm</p>
-      <p>95% of individuals were willing to give some feedback to improve the accuracy of Tier5&#39;s contact information</p>
+      <p class="heavyText">95% of individuals were willing to give some feedback to improve the accuracy of Tier5&#39;s contact information</p>
     </div>
   </div>
 </div>
@@ -462,23 +462,84 @@
 
 </div>
 
-<div class="squaresAndRecs">
-
-
 <div class="squareRec">
 
-<div class= "square heavyText">
-  <p>&#34;Every lead takes lots of sweat, dilligence and calling in favors.&#34;
-  </p>
+  <div class="squareRecSec recPaddimg">
+    <div class="rec rec1 heavyText">
+      <p> It&#39;s hard to make a good first impression
+      </p>
+    </div>
+
+    <div class= "square heavyText">
+      <p>&#34;Approaching any lead takes lots of sweat, dilligence and calling in favors.&#34;
+      </p>
+      </div>
+
+    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/saleswoman1.png">
+
   </div>
 
-<div class="rec heavyText">
-  <p>First impressions are a hard, one-shot deal.
-  </p>
-</div>
+  <div class="squareRecSec recPaddimg">
+    <div class="rec rec2 heavyText">
+      <p>Finding contact information is time consuming
+      </p>
+    </div>
 
-</div>
-<!-- ADD MROE HERE -->
+    <div class= "square heavyText">
+      <p>&#34;Guessing emails takes a long time and usually involves a lot of trial and error.&#34;
+      </p>
+      </div>
+
+    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/salesman1.png">
+
+  </div>
+
+  <div class="squareRecSec recPaddimg">
+
+    <div class="rec rec3 heavyText">
+      <p>Want distilled, revlevent, personal information
+      </p>
+    </div>
+
+    <div class= "square heavyText">
+      <p>&#34;My biggest pain point is distilling information about the person...so I can come off smarter.&#34;
+      </p>
+      </div>
+
+    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/saleswoman2.png">
+
+  </div>
+
+  <div class="squareRecSec recPaddimg">
+
+    <div class="rec rec4 heavyText">
+      <p>Want control over the prospecting process
+      </p>
+    </div>
+
+    <div class= "square heavyText">
+      <p>&#34;Outsourcing the prospecting process is time consuming and frustrating.&#34;
+      </p>
+      </div>
+
+    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/salesman2.png">
+
+  </div>
+
+  <div class="squareRecSec">
+    <div class="rec rec5 heavyText">
+      <p>Different age groups require different contact methods
+      </p>
+    </div>
+
+    <div class= "square heavyText">
+      <p>&#34;You can&#39;t waste time with millennials. You have to tailor your communications to their behavior.&#34;
+      </p>
+      </div>
+
+    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/salesman3.png">
+
+  </div>
 
 </div>
 
@@ -493,8 +554,6 @@
     </div>
 </div>
 
-<!-- <div class="line"></div> -->
-
 <div class="findings">
     <div class="findingsCircle"></div>
 
@@ -502,8 +561,6 @@
       <p><strong>There are two very distinct types of salespeople with different requirements</strong>: targeted bulk leads or targeted individual search.</p>
     </div>
 </div>
-
-<!-- <div class="line"></div> -->
 
 <div class="findings">
     <div class="findingsCircle"></div>
@@ -513,15 +570,15 @@
     </div>
 </div>
 
-<!-- <div class="line"></div> -->
-
 <div class="findings">
     <div class="findingsCircle"></div>
 
     <div class="findingsText">
-      <p>Harnassing <b font-weight="800">social media and Klout scores are integral for users</b> to better connect with growing millennial market.</p>
+      <p>Harnassing <b>social media and Klout scores are integral for users</b> to better connect with growing millennial market.</p>
     </div>
+
 </div>
+
 
     <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
     <div class="processSectionTitle" id="designSection">Design</div>
