Adding Journey Maps Personas and User Flow

--- a/tier5.html
+++ b/tier5.html
@@ -419,22 +419,21 @@
 <div class="researchCirTri">
     <div class="researchCircles">
       <!-- <p class="circleP1 researchP">Researching our user&#39;s daily lead requirement gave us this insight:</p> -->
-      <p class="titleP researchP">Most salespeople are one of two main types:</p>
-      <!-- <p class="researchP">High Touch, Low Volume</p>
-      <p class="researchP">Low Touch, High Volume</p> -->
+      <p class="titleP">Most salespeople are one of two main types:</p>
+      <p class="heavyText">High Touch, Low Volume &nbsp;&nbsp;&nbsp;&nbsp; Low Touch, High Volume</p>
+      <!-- <p class="researchP">Low Touch, High Volume</p> -->
       <img class="circles3" alt="3 Circles" src="myimages/tier5/research/circles3.png">
     </div>
 
   <div class="researchTriangles">
-
+<!-- THIS IS THE TESTER TRIANGLE -->
   <div class="triangleSection">
+    <p class= "triangleText titleP">Waste of time &amp money</p>
     <img class="triangle" alt="Triangle charts" src="myimages/tier5/research/triangle62.png">
-
-    <div class = "triangleText">
-      <p class="titleP">Waste of time &amp money</p>
-      <p class="heavyText">62% of individuals use two or more platforms to find leads</p>
-    </div>
+    <!-- <div class = "triangleText"> -->
+    <p class="heavyText">62% of individuals use two or more platforms to find leads</p>
   </div>
+  <!-- </div> -->
 
   <div class="triangleSection">
     <img class="triangle"alt="Triangle charts" src="myimages/tier5/research/triangle76.png">
@@ -480,7 +479,7 @@
   </div>
 
   <div class="squareRecSec recPaddimg">
-    <div class="rec rec2 heavyText">
+    <div class="rec rec2">
       <p>Finding contact information is time consuming
       </p>
     </div>
@@ -496,7 +495,7 @@
 
   <div class="squareRecSec recPaddimg">
 
-    <div class="rec rec3 heavyText">
+    <div class="rec rec3">
       <p>Want distilled, revlevent, personal information
       </p>
     </div>
@@ -512,7 +511,7 @@
 
   <div class="squareRecSec recPaddimg">
 
-    <div class="rec rec4 heavyText">
+    <div class="rec rec4">
       <p>Want control over the prospecting process
       </p>
     </div>
@@ -527,7 +526,7 @@
   </div>
 
   <div class="squareRecSec">
-    <div class="rec rec5 heavyText">
+    <div class="rec rec5 ">
       <p>Different age groups require different contact methods
       </p>
     </div>
@@ -537,7 +536,7 @@
       </p>
       </div>
 
-    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/salesman3.png">
+    <img class="faceCircles" alt="3 Circles" src="myimages/tier5/research/ajay-round.png">
 
   </div>
 
@@ -579,8 +578,147 @@
 
 </div>
 
+<div class="processSectionTitle" id="synthesisSection">Synthesis</div>
 
-    <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
+<div class="centerJMap">
+  <p class="journeyTitle"><b>Journey Map:</b> The Salesperson&#39;s Experience</p>
+
+  <img class="journeyMap" alt="Salesperson's Journey Map" src="myimages/tier5/synthesis/journey-map.png">
+</div>
+
+  <p class="statement">Our personas datail the two main types of salespeople</p>
+
+  <div class="personas">
+
+<div class="personaAjayBrad">
+
+    <p class="personaTypes"> High Volume, Low Touch</p>
+
+    <!-- <div class="squares"> -->
+      <div class="squaresPersonas">
+
+
+      <div class="squaresTop">
+        <img class="ajay" alt="Picture of a Man" src="myimages/tier5/synthesis/ajay.png">
+        <div class="textBoxName ajayName">
+          <p class="SalesmanName"></p>
+          <p>Age: 26</p>
+          <p>Location: New York City, NY</p>
+          <p>Marital Status: Single</p>
+          <p>Occupation: Sales Hacker</p>
+        </div>
+        <div class="textBoxQuote textBoxQuoteAjay">
+          <p>&#34;I need leads by the bucketful, not the handful&#34;
+        </div>
+      </div>
+
+      <div class="squaresBottom">
+
+        <div class="textBoxGoals">
+          <p class="boxTitles">Goals</p>
+          <ul>
+            <li>Save time </li>
+            <li>Meet agressive sales targets</li>
+            <li>Get commission</li>
+          </ul>
+        </div>
+
+        <div class="textBoxFrustrations">
+          <p class="boxTitles">Frustrations</p>
+          <ul>
+            <li>50% of day spent prospecting</li>
+            <li>Relies on email marketing,
+            only 5% response rate</li>
+            <li>Uses overseas fact checkers, slow process</li>
+          </ul>
+        </div>
+
+        <div class="textBoxTech">
+          <p class="boxTitles">Technology</p>
+          <ul>
+            <li>Infusionsoft</li>
+            <li>Datanyze</li>
+            <li>ZoomInfo</li>
+            <li>Hoovers</li>
+            <li>LinkedIn</li>
+          </ul>
+        </div>
+        <!-- squarebottom -->
+    </div>
+<!-- 1st set squarepersonas -->
+</div>
+<!-- ajay and brad -->
+    </div>
+  <!-- </div> -->
+
+    <div class="personaAjayBrad">
+
+  <p class="personaTypes"> High Touch, Low Volume</p>
+  <div class="squaresPersonas">
+
+      <div class="squaresTop">
+      <img class="brad" alt="Picture of a Man" src="myimages/tier5/synthesis/brad.png">
+      <div class="textBoxName textBoxNameBrad">
+        <p class="SalesmanName"></p>
+        <p>Age: 52</p>
+        <p>Location: San Francisco, CA</p>
+        <p>Marital Status: Married</p>
+        <p>Occupation: VP of Sales</p>
+      </div>
+      <div class="textBoxQuote textBoxQuoteBrad">
+        <p>&#34;There is no good way to keep apprised of news on your leads.&#34;
+      </div>
+    </div>
+
+      <div class="squaresBottom">
+
+      <div class="textBoxGoals">
+        <p class="boxTitles">Goals</p>
+        <ul>
+          <li>Nurture client relationships</li>
+          <li>Stay &#34;top of mind&#34;</li>
+          <li>Meet sales targets,
+          up-sell</li>
+        </ul>
+      </div>
+
+      <div class="textBoxFrustrations">
+        <p class="boxTitles">Frustrations</p>
+        <ul>
+          <li>Limited bandwidth</li>
+          <li>Long time to execute sale</li>
+          <li>3 to 5+ tools required to find lead info</li>
+        </ul>
+      </div>
+
+      <div class="textBoxTech">
+        <p class="boxTitles">Technology</p>
+        <ul>
+          <li>Salesforce</li>
+          <li>InsideView</li>
+          <li>data.com</li>
+          <li>Google alerts</li>
+          <li>LinkedIn</li>
+        </ul>
+      </div>
+
+    </div>
+<!-- squares personas -->
+      </div>
+    <!-- persona ajay brad -->
+    </div>
+      <!-- all persona section -->
+  </div>
+
+
+    <img class="userBracket" alt="Downward facing bracket" src="myimages/tier5/synthesis/bracket.png">
+
+
+      <p class="userFlowTitle">Ajay&#39;s User Flow</p>
+      <div class="userFlow">
+      <img class="userFlowImg" alt="Downward facing bracket" src="myimages/tier5/synthesis/user-flow.png">
+    </div>
+
     <div class="processSectionTitle" id="designSection">Design</div>
     <div class="processSectionTitle" id="researchSection">Build &amp Deliver</div>
 
