Adding Design Section

--- a/tier5.html
+++ b/tier5.html
@@ -597,7 +597,6 @@
     <!-- <div class="squares"> -->
       <div class="squaresPersonas">
 
-
       <div class="squaresTop">
         <img class="ajay" alt="Picture of a Man" src="myimages/tier5/synthesis/ajay.png">
         <div class="textBoxName ajayName">
@@ -710,7 +709,6 @@
       <!-- all persona section -->
   </div>
 
-
     <img class="userBracket" alt="Downward facing bracket" src="myimages/tier5/synthesis/bracket.png">
 
 
@@ -719,8 +717,110 @@
       <img class="userFlowImg" alt="Downward facing bracket" src="myimages/tier5/synthesis/user-flow.png">
     </div>
 
-    <div class="processSectionTitle" id="designSection">Design</div>
-    <div class="processSectionTitle" id="researchSection">Build &amp Deliver</div>
+    <div class="statement octoOrange">The problem: redefined</div>
+<div class="problem">
+  <p class="problemTitle">
+    We found that the saleperson&#39;s problem is two fold:
+  </p>
+    <p> 1 Quickly finding targeted leads with correct contact details</p>
+    <p> 2 Difficult to find new and information to help nurture prospects</p>
+</div>
+
+<p class="alignGoalsTitle">We Considered both User &amp Business Goals
+</p>
+<div class="alignCircles">
+
+  <img class="venn" alt="Business-Design Goals Venn Diagram" src="myimages/tier5/synthesis/design-venn.png">
+</div>
+
+<div class="statement statmentOrange">Our solution: two high level experiences</div>
+
+<div class="experiences">
+  <div class="realTimeAndNur realTime">
+    <img class="pillar" alt="Pillar" src="myimages/tier5/synthesis/pillar.png">
+    <div class="experienceText">
+      <p class="experienceTitle">Real-Time Connections</p>
+      <p class="experienceSentence">Targeted, instant, generation of rich, relevant leads and accurate contact information in bulk</p>
+    </div>
+  </div>
+
+  <div class="realTimeAndNur">
+      <img class="pillar" alt="Pillar" src="myimages/tier5/synthesis/pillar.png">
+      <div class="experienceText">
+        <p class="experienceTitle">Nurturing Connections</p>
+        <p class="experienceSentence">News and information to make effective connections and strong, first impressions</p>
+      </div>
+  </div>
+</div>
+
+<div class="processSectionTitle">Design</div>
+
+<!-- <p class="videoTitle"> Design Studio with Our Client</p> -->
+<div class="videoDiv">
+  <div class="iframe">
+    <iframe width="640" height="360" src="https://www.youtube.com/embed/BBahzHpL4ag" frameborder="0" allowfullscreen></iframe>
+    <!-- design-stop-motion.m4v -->
+  </div>
+  <div class="videoText heavyText">
+    <p >In order to fully invest our stakeholders in our strategy, we involved them in a &#34;design studio&#34; ideation process. We also provided them with daily updates and frequent Keynote presentations so they were always updated on our progress throughout the project. This strategy resulted in significant client buy-in and as a result a smooth running design process.
+    </p>
+  </div>
+
+</div>
+
+
+  <div class="statement featureMargins">Initial Concept &amp Features</div>
+<div class="features">
+  <div class="realTimeAndNur2 realTime">
+        <p class="experienceTitle">Real-Time Connections</p>
+        <div class="iconSentence">
+          <img class="featureIcon" alt="Funnel Icon" src="myimages/tier5/design/funnel-icon.png">
+          <p class="experienceSentence2">Smart, quick, easy-to-use filters to target leads</p>
+        </div>
+        <div class="iconSentence">
+          <img class="featureIcon" alt="Sort Icon" src="myimages/tier5/design/sort-icon.png">
+          <p class="experienceSentence2">Sorting capabilities to review list</p>
+        </div>
+        <div class="iconSentence">
+          <img class="featureIcon" alt="US Map Icon" src="myimages/tier5/design/us-icon.png">
+          <p class="experienceSentence2">Analytics/overview to size-up lead list</p>
+        </div>
+        <div class="iconSentence">
+          <img class="featureIcon" alt="Eye Icon" src="myimages/tier5/design/eye-icon.png">
+          <p class="experienceSentence2">Multiple views, fits any preference</p>
+        </div>
+        <div class="iconSentence">
+          <img class="featureIcon flagIcon" alt="Flag Icon" src="myimages/tier5/design/flag-icon.png">
+          <p class="experienceSentence2">Leave feedback to improve your lead quality</p>
+        </div>
+      </div>
+
+
+  <div class="realTimeAndNur2">
+      <div class="nurtureValign">
+          <p class="experienceTitle">Nurturing Connections</p>
+          <div class="iconInline">
+            <img class="featureIcon" alt="RSS Icon" src="myimages/tier5/design/rss-icon.png">
+            <p class="experienceSentence2">Newsfeed to keep tabs on lead&#39;s activities</p>
+          </div>
+          <div class="iconInline">
+            <img class="featureIcon" alt="Sort Icon" src="myimages/tier5/design/search-icon.png">
+            <p class="experienceSentence2">Individual search, find Bob Smith&#39;s email now! </p>
+          </div>
+          <div class="iconInline">
+            <img class="featureIcon" alt="Connect Icon" src="myimages/tier5/design/connect-icon.png">
+            <p class="experienceSentence2">Connectivity view, assess their relationships</p>
+          </div>
+      </div>
+  </div>
+  <!-- features -->
+</div>
+
+
+<div class="processSectionTitle">Build &amp Deliver</div>
+
+
+
 
 
       <!-- THE CONTENT DIV   -->
