--- a/tier5.html
+++ b/tier5.html
@@ -816,12 +816,9 @@
   <!-- features -->
 </div>
 
+  <div class="statement featureMargins">User Testing</div>
 
 <div class="processSectionTitle">Build &amp Deliver</div>
-
-
-
-
 
       <!-- THE CONTENT DIV   -->
       </div>
