Adjust persona spacing

--- a/tier5.html
+++ b/tier5.html
@@ -588,16 +588,16 @@
 
   <p class="statement">Our personas datail the two main types of salespeople</p>
 
-  <div class="personas">
+  <div class="personas row">
 
-<div class="personaAjayBrad">
+<div class="personaAjayBrad col-md-6">
 
     <p class="personaTypes"> High Volume, Low Touch</p>
 
     <!-- <div class="squares"> -->
       <div class="squaresPersonas">
 
-      <div class="squaresTop">
+      <div class="squaresTop row">
         <img class="ajay" alt="Picture of a Man" src="myimages/tier5/synthesis/ajay.png">
         <div class="textBoxName ajayName">
           <p class="SalesmanName"></p>
@@ -611,7 +611,7 @@
         </div>
       </div>
 
-      <div class="squaresBottom">
+      <div class="squaresBottom row">
 
         <div class="textBoxGoals">
           <p class="boxTitles">Goals</p>
@@ -650,12 +650,12 @@
     </div>
   <!-- </div> -->
 
-    <div class="personaAjayBrad">
+    <div class="personaAjayBrad col-md-6">
 
   <p class="personaTypes"> High Touch, Low Volume</p>
   <div class="squaresPersonas">
 
-      <div class="squaresTop">
+      <div class="squaresTop row">
       <img class="brad" alt="Picture of a Man" src="myimages/tier5/synthesis/brad.png">
       <div class="textBoxName textBoxNameBrad">
         <p class="SalesmanName"></p>
@@ -669,7 +669,7 @@
       </div>
     </div>
 
-      <div class="squaresBottom">
+      <div class="squaresBottom row">
 
       <div class="textBoxGoals">
         <p class="boxTitles">Goals</p>
