--- a/tier5.html
+++ b/tier5.html
@@ -64,17 +64,22 @@
 
             <p class="projectTitleSize" id="projectTitle">Tier5 Outbound Sales Lead Generating Platform</p>
         </div>
-        <div class="introBoxes">
-          <div class="introBox introBox1">
+        <div class="introBoxes row">
+          <div class="introBox col-xs-6 ">
+            <!-- <div class="center-block"> -->
             <p class="boxTitle">The Client</p>
             <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to give their outbound sales-lead generating platform a visual facelift. But after our extenisive research we found their UX Design and even part of their business model also needed a rebuild. Our redesign increased their market opportunity by 3x.
           </p>
+            <!-- </div> -->
           </div>
-          <div class="introBox">
+
+          <div class="introBox col-xs-6 col-md-offset-1">
+              <!-- <div class="center-block"> -->
             <p class="boxTitle">My Role</p>
-            <p class="boxText heavyText">Over 2 a two-week period our very close-knit, two-person team worked collaberatively on every aspect of UX Design process: research, hueristic evaluation, compatitive analysis, user interviews, user testing, design, sketching, creating low- and medium-fidelity protoytypes, and presenting our work.
+            <p class="boxText heavyText">Over 2 a two-week period our very close-knit, two-person team worked collaberatively on every aspect of UX Design process: research, hueristic evaluation, compatitive analysis, user interviews, user testing,design, sketching, protoytyping, and presenting our work.
           </p>
-          </div>
+        <!-- </div> -->
+      </div>
         </div>
         <div class="ourProcess row">
             <p class="ourProcessTitle">Our Process</p>
@@ -600,7 +605,7 @@
       <div class="squaresTop row">
         <img class="ajay" alt="Picture of a Man" src="myimages/tier5/synthesis/ajay.png">
         <div class="textBoxName ajayName">
-          <p class="SalesmanName"></p>
+          <p class="SalesmanName">Ajay</p>
           <p>Age: 26</p>
           <p>Location: New York City, NY</p>
           <p>Marital Status: Single</p>
